# urban-hack-sentinel

./: .gitignore  .pre-commit-config.yaml  INTEGRATION_ANALYSIS.md  MASTER_PLAN.md  README.md  README.pt.md  ROADMAP.md  SECURITY_REPORT.md  config.env.example  mkdocs.yml  pyproject.toml  test_setup.sh  urban-hack-sentinel.service  urban_hack_sentinel.sh
.github/workflows/: ci.yml  release.yml
audit/: audit1_devstral_small.md  audit1_devstral_small_diagrams.md  audit1_gemini_3_1_pro.md  audit1_gemini_3_1_pro_diagrams.md  audit2_mistral_medium_3_5.md  audit2_mistral_medium_3_5_diagrams.md  audit3_mimo_v2_5_free.md  audit3_mimo_v2_5_free_diagrams.md
config/: config.env.example  config.yaml.example  device_quirks.json
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm64  MULTIARCH.md  MULTIARCH.pt.md  docker-compose.yml
docs/: API.md  API.pt.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  CORRECAO_SESSIONSCOPE_2026-07-01.md  OVERVIEW.md  OVERVIEW.pt.md  PLAN.md  PLAN.pt.md  PLAN_IMPLEMENTATION_2026-06-29.md  PLAN_PHASE10.pt.md  PLAN_X86_UI.md  SESSAO_AUTONOMA_2026-07-01.md  SMOKE_TUI.md  SMOKE_TUI.pt.md  WORKFLOW.md  WORKFLOW.pt.md  index.md
docs/archive/: INTEGRATION_ANALYSIS.md  MASTER_PLAN_legacy.md  PLAN_PHASE10_legacy.md  ROADMAP_legacy.md
scripts/: bootstrap_chroot.sh  gen_ref_pages.py  release.sh
src/urban_hs/: __init__.py  __main__.py
src/urban_hs/cli/: main.py
src/urban_hs/core/: __init__.py  attack_event_adapter.py  binary_manifest.py  chroot_process.py  concurrency.py  config.py  event_bus.py  forensics.py  health.py  logger.py  logging_config.py  mac_anonymiser.py  memory.py  plugins.py  process_mgr.py  scheduler.py  security.py  session_scope.py  storage.py
src/urban_hs/hal/: platform.py  types.py
src/urban_hs/hal/ble/: __init__.py
src/urban_hs/hal/wifi/: __init__.py
src/urban_hs/modules/: __init__.py  bt_hid.py  esp32.py  mqtt.py  ssid_confusion.py  urban_hack.py
src/urban_hs/modules/ble/: __init__.py  bettercap.py  exploit_chain.py  fastpair.py  hfp.py  plugin.py
src/urban_hs/modules/camera/: __init__.py  enumeration.py  vuln_check.py
src/urban_hs/modules/credential/: __init__.py  manager.py
src/urban_hs/modules/exploit/: __init__.py  runner.py
src/urban_hs/modules/hid/: __init__.py  ducky.py  gadget.py  injector.py
src/urban_hs/modules/metasploit/: __init__.py  console.py  rpc.py
src/urban_hs/modules/network/: __init__.py  camera.py  nuclei.py  router.py  scanner.py  searchsploit.py  types.py
src/urban_hs/modules/plugins/: __init__.py  example_reporter.py  example_sniffer.py
src/urban_hs/modules/reporting/: __init__.py  generator.py  gpg_evidence.py
src/urban_hs/modules/wifi/: __init__.py  attacks.py  fragattacks.py  managers.py  plugin.py  scanner.py
src/urban_hs/modules/wifi/attacks/: __init__.py  base.py  deauth.py  wpa.py  wps.py
src/urban_hs/ui/api/: auth.py  main.py  middleware.py  rate_limit.py
src/urban_hs/ui/api/routers/: attacks.py  ble.py  events.py  network.py  system.py  wifi.py
src/urban_hs/ui/tui/: app.py
src/urban_hs/ui/web/: index.html
tests/: test_api_integration.py  test_api_smoke.py  test_attacks_base.py  test_attacks_execute.py  test_attacks_inventory.py  test_attacks_submodules.py  test_ble_module.py  test_cli.py  test_e2e.py  test_event_contract.py  test_fragattacks_contract.py  test_gps_geo.py  test_hal.py  test_network_module.py  test_session_scope.py  test_session_scope_guard.py  test_sprint6.py  test_sprint8b.py  test_tui_phase10.py  test_wifi_module.py  test_wifi_plugin_contract.py  test_ws_auth.py
